[package]
name = "darts-clone-rs"
version = "0.1.1"
edition = "2021"
description = "Rust binding of a clone of Darts (Double-ARray Trie System)"
license = "BSD-3-Clause"
authors = ["WhiredPlanck <whiredplanck[at]outlook.com>"]
repository = "https://github.com/WhiredPlanck/darts-clone-rs"
documentation = "https://docs.rs/darts-clone-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libdarts-sys = { path = "libdarts-sys", version = "0.1" }

[dev-dependencies]
rand = "0.8"

[profile.release]
lto = true
